Fixed z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,18 +50,19 @@
   color: white;
   background: url(../images/cover.jpg) center no-repeat;
   background-size: cover;
-  z-index: -2;
 }
 
 .overlay {
   position: absolute;
+  z-index: 1;
   width: 100%;
   min-height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: -1;
 }
 
 .cover__title {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -88,6 +89,8 @@
 }
 
 .cover__description {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -124,20 +127,21 @@
 .lots__card-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 25px;
   margin-bottom: 30px;
   list-style: none;
-  flex-wrap: wrap;
 }
 
 .lots__card-list-item {
   width: fit-content;
-  min-height: 596px;
   max-width: 31.75%;
+  min-height: 596px;
 }
 
 .card {
   position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -145,7 +149,6 @@
   color: white;
   background-position: center;
   background-size: cover;
-  z-index: -2;
 }
 
 .card_type_film {
@@ -165,6 +168,7 @@
 }
 
 .card__title {
+  z-index: 2;
   padding: 48px 40px 0;
   font-weight: 700;
   font-size: 22px;
@@ -173,6 +177,7 @@
 }
 
 .card__text {
+  z-index: 2;
   padding: 0 40px 48px;
   font-size: 20px;
 }
